6. В классе StartUI заменить вывод в консоль на Consumer. [#228689]